Fix up BwEventUtil - was returning null instead of result object.
Minor changes to caldav sysintf methods